--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.x",
+    "next": "^15.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0"
@@ -20,7 +20,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9",
+    "eslint": "^8.50.0",
     "eslint-config-next": "13.x",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
