--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ESLint": "npm:eslint@^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
     "next": "^15.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -20,8 +22,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.50.0",
-    "eslint-config-next": "13.x",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
